displays presidents on a graph dependent on days in office (y-pos) with tooltip showing picture and name/days

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Happy 4th!</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
-
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+  <script src="javascripts/d3.js"></script>
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+  <script src="javascripts/jquery.js"></script>
   <script src="javascripts/scripts.js"></script>
-
+  <script src="javascripts/presidents.js"></script>
 </head>
 <body>
-  <svg>
 
 </body>
 </html>
